# memento-ai

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.probiot.mk  Makefile.r2d2.mk  README.md  Taskfile.yml  base.vars.yml  devbox.json  probiot.dockerfile  r2d2.dockerfile
.github/workflows/: deploy.yml  deployment.yml  docker.yml  docker_artifact.yml  main.yml  test.yml  tests.yml  web_artifact.yml
app/: Cargo.toml
app/src/: common.rs  lib.rs  nervo_app.rs
app/src/ai/: ai_db.rs  mod.rs  nervo_llm.rs  open_ai.rs
app/src/db/: ai_local_db.rs  mod.rs  nervo_message_model.rs
app/src/telegram/: mod.rs  nervo_bot.rs  tg_keyboard.rs
docs/: encryption.md  just.md  learn.md  nervoset.md
infra/: .dockerignore  .gitignore  Dockerfile  Taskfile.yml  build.gradle.kts  common.yml  devbox.json  justfile  kube.yml  settings.gradle.kts  shell.nix  task.k  taskomatic.sh
infra/deployment/: Taskfile.yml  build.gradle.kts  deployment.tf  justfile  k3d.task.yml  kube-prod.yml  shell.nix  vector_db.task.yml
infra/hazmat/: Taskfile.yml  hash_auth.sh  hash_pass.sh  justfile  nixw.sh  shell.nix
infra/k8s/: Taskfile.yml  app.task.yml  build.gradle.kts  justfile
infra/taskomatic/: taskfile_schema.k
migrations/2024-02-16-210606_migration_name/: down.sql  up.sql
nervo_core/: Cargo.toml
nervo_core/src/: common.rs  lib.rs  nervo_app.rs
nervo_core/src/ai/: ai_db.rs  mod.rs  nervo_llm.rs
nervo_core/src/db/: ai_local_db.rs  local_db.rs  mod.rs
nervo_core/src/telegram/: bot_utils.rs  mod.rs  nervo_bot.rs  nervo_bot_r2_d2.rs  probiot_t1000.rs  r2_d2.rs  tg_keyboard.rs
nervo_deps/: Cargo.toml
nervoset/: .dockerignore  .gitignore  Taskfile.yml  app.dockerfile  base.dockerfile  build.dockerfile  build.gradle.kts  compose.yaml  devbox.json  justfile  migration.dockerfile  package-lock.json  settings.gradle.kts  test.dockerfile
nervoset/.task/: base.vars.yml  common.yml  (+1 more)
nervoset/app/: Cargo.toml  recipe.json
nervoset/app/jaison/: Cargo.toml
nervoset/app/jaison/resources/: help_message.txt  start_message.txt
nervoset/app/jaison/resources/assist/: assistant_system_role.txt
nervoset/app/jaison/resources/creation_resources/: creation_mode_msg.txt  main_system_role_creation_task.txt  preprocessing_data_for_local_db.txt  role_creation_system_role.txt  sphere_creation_system_role.txt
nervoset/app/jaison/resources/education_resources/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
nervoset/app/jaison/resources/education_resources/links/: 1.txt  2.txt
nervoset/app/jaison/resources/localization/: en.json  ru.json
nervoset/app/jaison/src/: ask_question.rs  creation.rs  edu_conv.rs  main.rs  user_interaction.rs  utils.rs
nervoset/app/jarvis/: Cargo.toml
nervoset/app/jarvis/src/: main.rs
nervoset/app/leo/: Cargo.toml
nervoset/app/leo/src/: main.rs
nervoset/app/nervo-migrant/: Cargo.toml
nervoset/app/nervo-migrant/src/: main.rs
nervoset/app/nervo-migrant/src/models/: migration_model.rs  migration_path_model.rs  mod.rs
nervoset/app/nervo_api/: Cargo.toml
nervoset/app/nervo_api/src/: errors.rs  lib.rs
nervoset/app/nervo_api/src/utils/: cryptography.rs
nervoset/app/nervo_core/: Cargo.toml
nervoset/app/nervo_core/src/: common.rs  lib.rs  nervo_app.rs
nervoset/app/nervo_core/src/ai/: ai_db.rs  mod.rs  nervo_llm.rs  qdrant_db.rs  qdrant_utils.rs
nervoset/app/nervo_core/src/common_utils/: common_utils.rs  mod.rs
nervoset/app/nervo_core/src/config/: common.rs  groot.rs  jarvis.rs  leo.rs  mod.rs  nervo_server.rs  probiot.rs
nervoset/app/nervo_core/src/context/: conclusions.rs  dialogue_state.rs  keywords.rs  main_handler.rs  mod.rs  permanent_memory.rs  user_context.rs
nervoset/app/nervo_core/src/db/: local_db.rs
nervoset/app/nervo_core/src/models/: feature_toggle.rs  message_transcription_type.rs  mod.rs  nervo_message_model.rs  qdrant_search_layers.rs  system_messages.rs  typing_action_model.rs  user_model.rs
nervoset/app/nervo_core/src/telegram/: bot_utils.rs  commands_handlers.rs  jarvis.rs  leo.rs  message_parser.rs  mod.rs  probiot_t1000.rs  r2_d2.rs  roles_and_permissions.rs  tg_keyboard.rs  wall_e.rs
nervoset/app/nervo_core/src/utils/: ai_utils.rs  ai_utils_data.rs  cryptography.rs  date_time_utils.rs  localisation_parser.rs  mod.rs
nervoset/app/nervo_sdk/: Cargo.toml
nervoset/app/nervo_sdk/src/: errors.rs  lib.rs
nervoset/app/nervo_sdk/src/api/: spec.rs
nervoset/app/nervo_sdk/src/common/: encoding.rs
nervoset/app/nervo_sdk/src/utils/: cryptography.rs
nervoset/app/nervo_server/: Cargo.toml
nervoset/app/nervo_server/resources/: crap_request_system_role.txt  vectorisation_roles.json
nervoset/app/nervo_server/src/: commands.rs  cors.rs  main.rs  queries.rs
nervoset/app/nervo_server/src/models/: mod.rs  server_message_model.rs
nervoset/app/nervo_wasm/: Cargo.toml  package-lock.json
nervoset/app/nervo_wasm/src/: lib.rs  wasm_error.rs
nervoset/app/nervo_wasm/src/browser/: mod.rs  nervo_wasm_store.rs
nervoset/app/nervo_wasm/src/common/: api_url.rs  errors.rs  mod.rs  nweb_spans.rs
nervoset/app/nervo_wasm/src/db/: mod.rs  wasm_repo.rs
nervoset/app/probiot_t1000/: Cargo.toml
nervoset/app/probiot_t1000/resources/: system_messages.json  vectorisation_roles.json
nervoset/app/probiot_t1000/src/: main.rs
nervoset/app/r2d2/: Cargo.toml
nervoset/app/r2d2/src/: main.rs
nervoset/app/resources/agent/kevin/: feature_toggle.json  system_messages.json
nervoset/app/resources/agent/kevin/system_roles/: assistant_memory.txt  clearing.txt  conclusions_pre_processing.txt  search_keywords.txt
nervoset/app/resources/agent/nervoznyak/: DRAFT_system_role.txt  DRAFT_vectorisation_roles.json  feature_toggle.json  layer_1_system_role.txt  system_messages.json  vectorisation_roles.json
nervoset/app/resources/agent/nervoznyak/system_roles/: crap.txt
nervoset/app/walle/: Cargo.toml
nervoset/app/walle/resources/: vectorisation_roles.json
nervoset/app/walle/src/: main.rs
src/: common.rs  main.rs
web-service/: Cargo.toml
web-service/src/: main.rs
(+183 files in other folders)
