[package]
name = "nervo_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
anyhow = "1.0.79"



teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }

log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.36.0", features = ["full"] }

async-openai = "0.18.3"

serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
