[package]
name = "nervo-core"
version = "0.1.0"
edition = "2021"

[build]
rustc-wrapper = "sccache"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "nervo_bot_core"

[dependencies]
config = "0.14.0"
anyhow = "1.0.79"
rand = "0.8.5"

qdrant-client = "1.7.0"

tokio = { version =  "1.36.0", features = ["full"] }

teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }

log = "0.4"
pretty_env_logger = "0.5.0"

async-openai = "0.18.3"

serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"

#sql DB
sqlx = { version = "0.7.3", features = ["macros", "sqlite", "runtime-tokio-native-tls"] }
#sqlx-rt = "0.6.3"
sqlx-macros = "0.7.3"

#time and date
chrono = { version = "0.4", features = ["serde"] }

#requests
reqwest = "0.11.24"