[package]
name = "nervo-web-service"
version = "0.1.0"
edition = "2021"


[dependencies]
nervo-bot-app = { path = "../app" }

anyhow = "1.0.79"

tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"

qdrant-client = "1.7.0"

teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
serde = { version = "1.0.196", features = ["derive"] }
