[workspace]

resolver = "2"

members = [
    "groot",
    "nervo_core",
    "jarvis",
    "nervo_server",
    "nervo_api",
    "nervo_wasm",
    "nervo-migrant"
]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"
enum-iterator = "2.1.0"

config = { version = "0.14", features = ["yaml"] }
clap = { version = "4.5.15", features = ["derive"] }

rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
sha2 = "0.10.8"

axum = "0.7.5"
reqwest = "0.12.3"

tokio = { version = "1.36.0", features = ["full"] }

#sql DB
sqlx = { version = "0.7.4", features = ["macros", "sqlite", "runtime-tokio-native-tls"] }
#sqlx-rt = "0.6.3"
sqlx-macros = "0.7.3"

#time and date
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-attributes = "0.1.27"
tracing-appender = "0.2.3"

# Json
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_derive = "1.0.204"

# LLM
async-openai = "0.23.4"

qdrant-client = "1.11.1"

teloxide = { version = "0.13.0", features = ["macros"] }

# Futures for async recursion
futures = "0.3"