[package]
name = "jaison"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
dotenv = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "0.12.5"
async-openai = "0.23.3"
serde_json = "1.0.117"
lazy_static = "1.5.0"
qdrant-client = "1.10.1"
tiktoken-rs = "0.5.9"