[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[dependencies]
nervo-core = { path = "../nervo_core" }
nervo-sdk = { path = "../nervo_sdk" }

clap.workspace = true

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true

tokio.workspace = true

teloxide.workspace = true

dotenv = "0.15"
reqwest = "0.12.5"
async-openai = "0.25.0"
lazy_static = "1.5.0"
qdrant-client = "1.10.1"
tiktoken-rs = "0.6.0"
chrono = "0.4"