[package]
name = "leo"
version = "0.1.0"
edition = "2021"

[dependencies]
nervo-core = { path = "../nervo_core" }

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true

tokio.workspace = true

teloxide.workspace = true