[package]
name = "nervo-migrant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nervo-core = { path = "../nervo_core" }
nervo-sdk = { path = "../nervo_sdk" }

anyhow.workspace = true
enum-iterator.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

async-openai.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

clap.workspace = true
uuid = { version = "1.10.0", features = ["v4"] }

futures.workspace = true