[package]
name = "nervo-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "nervo_bot_core"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-attributes = "0.1.27"

qdrant-client.workspace = true

rand = "0.8.5"

tokio = { version =  "1.36.0", features = ["full"] }

teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }

openai_dive = "0.4.5"
tiktoken-rs = "0.5.8"

secrecy = "0.8.0"

#sql DB
sqlx = { version = "0.7.3", features = ["macros", "sqlite", "runtime-tokio-native-tls"] }
#sqlx-rt = "0.6.3"
sqlx-macros = "0.7.3"

#time and date
chrono = { version = "0.4", features = ["serde"] }

#requests
reqwest = "0.12.4"
bytes = "1"

async-openai.workspace = true