[package]
name = "nervo-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "nervo_bot_core"

[dependencies]
nervo-api = { path = "../nervo_api" }

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true

qdrant-client.workspace = true

rand.workspace = true

tokio.workspace = true

teloxide.workspace = true

reqwest.workspace = true

# Async OpenAi library is not working with audio, we have to use the openai_dive library 
openai_dive = "0.4.5"
tiktoken-rs = "0.5.8"

#sql DB
sqlx.workspace = true
sqlx-macros.workspace = true

#time and date
chrono.workspace = true

async-openai.workspace = true

bytes = "1"
