[package]
name = "nervo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
nervo-core = { path = "../nervo_core" }
nervo-sdk = { path = "../nervo_sdk" }

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true

async-openai.workspace = true


tower-http = { version = "0.5.2", features = ["cors", "trace"] }
http = "1.1.0"

tokio.workspace = true
axum.workspace = true
