[package]
name = "nervo-wasm"
version = "0.1.0"
authors = [
    "Big_DK <dmitry@meta-secret.org>",
    "CypherKitty <bynull@meta-secret.org>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nervo-api = { path = "../nervo_api" }

serde_json.workspace = true
serde.workspace = true
serde_derive.workspace = true

reqwest = { version = "0.12.5", features = ["blocking", "json"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.21"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
console_log = "1.0.0"
thiserror = "1.0.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
