[package]
name = "nervo-wasm"
version = "0.1.0"
authors = [
    "Big_DK <dmitry@meta-secret.org>",
    "CypherKitty <bynull@meta-secret.org>"
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# This breaks ideas' compilation ability, so, temporary disabled
#[build]
#target = "wasm32-unknown-unknown"

[features]
default = ["console_error_panic_hook"]

[dependencies]
nervo-sdk = { path = "../nervo_sdk" }

thiserror.workspace = true
anyhow.workspace = true
error-stack = { version = "0.5.0", features = ["serde"] }

serde_json.workspace = true
serde.workspace = true
serde_derive.workspace = true

reqwest = { version = "0.12.5", features = ["blocking", "json"] }

js-sys = "0.3.69"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
console_log = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-cookies = { version = "0.2.1" }
rexie = "0.6.2"

# Wasm dependencies
tracing.workspace = true
tracing-web = "0.1.3"
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "time"]  }
time = { version = "0.3", features = ["wasm-bindgen"] }

# Markdow
pulldown-cmark = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
