[package]
name = "r2d2"
version = "0.1.0"
edition = "2021"

[dependencies]
nervo-core = { path = "../nervo_core" }

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-attributes = "0.1.27"

tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"

qdrant-client = "1.7.0"

teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
