[package]
name = "walle"
version = "0.1.0"
edition = "2021"

[build]
rustc-wrapper = "sccache"

[dependencies]
nervo-core = { path = "../nervo_core" }

thiserror.workspace = true
anyhow.workspace = true

config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-attributes = "0.1.27"

tokio = { version = "1.36.0", features = ["full"] }

teloxide = { version = "0.12", features = ["macros"] }

